Strategy pattern applied to Decasteljau methods, GraphicsDLL put inside solution

--- a/beadando_deCasteljau/_GraphicsWinForm/DeCasteljauForm.resx
+++ b/beadando_deCasteljau/_GraphicsWinForm/DeCasteljauForm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABMLAAATCwAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAAAALsAAABZAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAWQAAALsAAAAMAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAzgAA
+        AGcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABnAAAAzgAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        ABAAAADOAAAAZwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGcAAADOAAAAEAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAEAAAAM4AAABnAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAZwAAAM4AAAAQAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAQAAAAzgAAAGcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABnAAAAzgAA
+        ABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABoAAADVAAAApQAAAGQAAABnAAAAZwAAAGcAAABnAAAAZAAA
+        AKUAAADVAAAAGgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAigAAAOYAAADNAAAAzQAAAM0AAADNAAAAzQAA
+        AM0AAADNAAAAzQAAAOYAAACKAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4AAADLAAAAiwAAAB4AAAAgAAAAIAAA
+        ACAAAAAgAAAAIAAAACAAAAAeAAAAiwAAAMsAAAAOAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAIkAAADkAAAAzAAA
+        AM0AAADNAAAAzQAAAM0AAADNAAAAzQAAAMwAAADkAAAAiQAAAAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADgAA
+        AE0AAAC8AAAA1QAAAGoAAABnAAAAZwAAAGoAAADVAAAAvAAAAE0AAAAOAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAACgAAALwAAACLAAAAAAAAAAAAAAAAAAAAAAAAAIsAAAC8AAAACgAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAUAAAAGAAAABgAAAAYAAAAEQAAAAEAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAABJAAAA4QAAAD0AAAAAAAAAAAAAAAAAAAAAAAAAPQAAAOEAAABIAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAEAAAARAAAAGAAAABgAAAAYAAAAFAAAAD4AAAA3gAAANAAAADiAAAA1QAA
+        ABgAAAAAAAAAAAAAAAAAAAAAAAAAFQAAAL0AAACjAAAABgAAAAAAAAAAAAAAAAAAAAAAAAAGAAAAowAA
+        AL0AAAAVAAAAAAAAAAAAAAAAAAAAAAAAABgAAADVAAAA4gAAANAAAADeAAAA+AAAAPkAAABYAAAACwAA
+        AF8AAADYAAAAGwAAAAAAAAAAAAAAAAAAAAwAAACWAAAA1QAAACsAAAAAAAAAEQAAAFIAAABSAAAAEQAA
+        AAAAAAArAAAA1QAAAJYAAAAMAAAAAAAAAAAAAAAAAAAAGwAAANgAAABfAAAACwAAAFgAAAD5AAAA+QAA
+        AEsAAAAAAAAAUgAAANgAAAAbAAAAAAAAAAAAAAAAAAAAQAAAAO4AAABgAAAAAAAAAAkAAACcAAAA4gAA
+        AOIAAACcAAAACQAAAAAAAABgAAAA7wAAAEAAAAAAAAAAAAAAAAAAAAAbAAAA2AAAAFIAAAAAAAAASwAA
+        APkAAAD8AAAAuwAAAJkAAAC/AAAA2gAAABoAAAAAAAAAAAAAAAAAAAAUAAAAxAAAAJMAAAAAAAAAKgAA
+        AOAAAABRAAAAUQAAAOAAAAAqAAAAAAAAAJIAAADEAAAAFAAAAAAAAAAAAAAAAAAAABoAAADaAAAAvwAA
+        AJkAAAC7AAAA/AAAAIsAAACxAAAA8wAAALUAAAB3AAAACQAAAAAAAAAAAAAAAAAAAAAAAABOAAAAigAA
+        AAUAAAAaAAAA0QAAAKAAAACgAAAA0QAAABgAAAA4AAAA4QAAAFcAAAAAAAAAAAAAAAAAAAAAAAAACQAA
+        AHcAAAC1AAAA8wAAALEAAACLAAAAAAAAACYAAADdAAAAQwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAnAAAAWAAAAAUAAABKAAAA3gAAAN4AAABJAAAABwAAAKgAAACzAAAACwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAEMAAADdAAAAJgAAAAAAAAAAAAAAFAAAANEAAABlAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAADMAAAB+AAAACAAAAAAAAAChAAAAoQAAAAAAAABMAAAA4gAAAEQAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAZQAAANEAAAAUAAAAAAAAAAAAAAADAAAArAAAAJwAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABoAAABgAAAADQAAAJ8AAACfAAAADgAAALsAAACfAAAABQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACcAAAArAAAAAMAAAAAAAAAAAAAAAAAAABrAAAA1AAA
+        ABsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAKAAAANwAAABgAAAAnQAAAJ0AAABgAAAA3gAA
+        ADIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGwAAANQAAABrAAAAAAAAAAAAAAAAAAAAAAAA
+        ACUAAADbAAAAZgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAigAAAMoAAAC3AAAAtwAA
+        AMoAAACKAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABmAAAA2wAAACUAAAAAAAAAAAAA
+        AAAAAAAAAAAAAQAAAIwAAADMAAAAGgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkAAAA1AAA
+        APUAAAD1AAAA1AAAACQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAGgAAAMwAAACMAAAAAQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAJAAAANQAAACMAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAByAAAA/QAAAP0AAAByAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAACMAAAA1AAA
+        ACQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAWQAAAOYAAABlAAAAAQAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAABgAAADLAAAAywAAABgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAZQAA
+        AOYAAABZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAewAAAOcAAABkAAAABAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADcAAAA3AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAA
+        AGQAAADnAAAAewAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAFQAAABsAAAAbAAAAGwAAABEAAAAIAAAAewAA
+        AOgAAACKAAAAGAAAAAAAAAAAAAAAAAAAAAcAAAAaAAAAGQAAABkAAAAaAAAABwAAAAAAAAAAAAAAAAAA
+        ABgAAACKAAAA6AAAAHsAAAAIAAAAEQAAABsAAAAbAAAAGwAAABUAAADPAAAA2gAAANgAAADcAAAAsgAA
+        ABEAAAACAAAAVwAAANQAAADJAAAAYQAAABgAAAAAAAAAXQAAANsAAADYAAAA2AAAANsAAABdAAAAAAAA
+        ABgAAABhAAAAyQAAANQAAABXAAAAAgAAABEAAACyAAAA3AAAANgAAADaAAAAzwAAAPsAAACEAAAASwAA
+        AIoAAADgAAAARgAAAC4AAAAuAAAAVAAAAL8AAAD5AAAA1AAAAJMAAAC3AAAA0QAAAFUAAABVAAAA0QAA
+        ALcAAACTAAAA1AAAAPkAAAC/AAAAVAAAAC4AAAAuAAAARgAAAOAAAACKAAAASwAAAIQAAAD7AAAA+QAA
+        AEsAAAAAAAAAUAAAAPcAAADjAAAA3wAAAN8AAADdAAAA4AAAAO8AAADzAAAA9AAAAPwAAAC5AAAABgAA
+        AAYAAAC5AAAA/AAAAPQAAADzAAAA7wAAAOAAAADdAAAA3wAAAN8AAADjAAAA9wAAAFAAAAAAAAAASwAA
+        APkAAAD6AAAAgAAAAEUAAACFAAAA4AAAAEoAAAA0AAAANQAAADUAAAA1AAAANAAAADQAAAAxAAAAmgAA
+        ANAAAABQAAAAUAAAANAAAACaAAAAMQAAADQAAAA0AAAANQAAADUAAAA1AAAANAAAAEoAAADgAAAAhQAA
+        AEUAAACAAAAA+gAAAPEAAAD7AAAA+QAAAP4AAADPAAAAFAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAABtAAAA/QAAAPkAAAD5AAAA/QAAAG0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFAAA
+        AM8AAAD+AAAA+QAAAPsAAADx/8fj///H4///x+P//8fj///H4///wAP//4AB//+AAf//gAH//8AD///j
+        x/8D48fAA8PDwAOEIcAjiBHEA4gRwAPAA8CP4APxj+JH8Y/wB/HH8A/jx/AP48P4H8Ph/D+H8Pw/D/B+
+        fg8AOBwAAAgQAAAAAAAgAAAEAAAAAAP4H8A=
+</value>
+  </data>
 </root>
